2007-01-24  Douglas Blank  <dblank@cs.brynmawr.edu>
	* src/docgen/PdfDoc.py: 0000870: docgen/PdfDoc.py offset error, 
	  and missing italics
	* src/plugins/Calendar.py: 0000858: Patch for calendar enhancements 
	  and new Birthday Report
	* src/plugins/holidays.xml: add holidays for France

2007-01-23  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py: add view option
	* src/images/Makefile.am: add stock_zoom
	* src/images/stock_zoom.png: added
	* src/gramps_main.py: register stock_zoom as a stock icon
	* src/GrampsDb/_GrampsBSDDB.py: initialize the next gramps_id
	indexes to the length of the tables to prevent a walk of the db 
	entries.
	* src/DisplayModels/_BaseModel.py: handle row-insert properly
	(BaseModel.delete_row_by_handle): fix sort array after delete
	* src/PageView.py: handle row adding properly

2007-01-22  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (vb_clicked): Put back the code that used to
	enforce the current view button;
	(switch_page_on_dnd): block and unblock button clicking during DnD.

2007-01-22  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels/_BaseModel.py: avoid rebuild on delete
	* src/PageView.py:  avoid rebuild on delete

2007-01-22  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditSource.py (query_response): Remove sourcerefs
	from repos (indirectly, through secondary objects).
	* src/Editors/_EditPlace.py (query_response): Avoid db walk.
	* src/DataViews/_FamilyList.py (remove): Set busy cursor.
	* src/DataViews/_PlaceView.py (remove): Set busy cursor.
	* src/DataViews/_SourceView.py (remove): Set busy cursor.
	* src/DataViews/_MediaView.py (remove): Set busy cursor.
	* src/DataViews/_EventView.py (remove): Set busy cursor.
	* src/DataViews/_RepositoryView.py (remove): Set busy cursor.
	* src/Editors/_EditEventRef.py (DelEventQuery): Remove unneeded class.
	* src/Filters/Rules/_HasTextMatchingSubstringOf.py: Remove
	unneeded import.